--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,6 +2,27 @@
     "configurations": [
         {
             "type": "java",
+            "name": "SimpleSpringContextLauncherApplication",
+            "request": "launch",
+            "mainClass": "com.AmrSaleh.learning_spring_framework_02.c1.SimpleSpringContextLauncherApplication",
+            "projectName": "learning-spring-framework"
+        },
+        {
+            "type": "java",
+            "name": "SimpleSpringContextLauncherApplication",
+            "request": "launch",
+            "mainClass": "com.AmrSaleh.learning_spring_framework_02.a0.SimpleSpringContextLauncherApplication",
+            "projectName": "learning-spring-framework"
+        },
+        {
+            "type": "java",
+            "name": "DepInjectionLauncherApplication",
+            "request": "launch",
+            "mainClass": "com.AmrSaleh.learning_spring_framework_02.a1.DepInjectionLauncherApplication",
+            "projectName": "learning-spring-framework"
+        },
+        {
+            "type": "java",
             "name": "App02HelloWorldSpring",
             "request": "launch",
             "mainClass": "com.AmrSaleh.learning_spring_framework_01.helloworld.App02HelloWorldSpring",
