adding actuator dependency for monitoring of the app

--- a/2-springboot/src/main/resources/application.properties
+++ b/2-springboot/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=learn-spring-boot
 logging.level.org.springframework.boot.devtools=TRACE
+management.endpoints.web.exposure.include=*
 spring.profiles.active= dev
