feat: creating web-app to manage todos.

--- a/4-myfirstwebapp/src/main/resources/application.properties
+++ b/4-myfirstwebapp/src/main/resources/application.properties
@@ -3,8 +3,30 @@ server.port=8080
 logging.level.org.springframework.web=DEBUG
 logging.level.com.amr_saleh.springboot.myfirstwebapp=INFO
 
+# H2 Database configuration
+# H2 is an in-memory database, so it will be created and destroyed with the application
+# The database will be available at http://localhost:8080/h2-console
+# spring.h2.console.enabled=true
+# spring.datasource.url=jdbc:h2:mem:testdb
+# spring.jpa.show-sql=true 
+
+# This is to ensure that the datasource is initialized before loading the JPA context, and to avoid issues with H2 in-memory database like "Table not found"
+# The Entities will be created automatically by Hibernate before executing the data.sql file scripts.
+spring.jpa.defer-datasource-initialization=true 
+
 # Spring MVC configuration
 # request --> Controller --> Spring MVC makes view resolver to concat the returned view name with prefix and suffix
 # prefix + (returned-view-name) + suffix --> /WEB-INF/jsp/hello.jsp
 spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
+spring.mvc.format.date=yyyy-MM-dd
+
+# DB configuration for PostgreSQL
+spring.datasource.url=jdbc:postgresql://localhost:5432/todo_db
+spring.datasource.username=postgres
+spring.datasource.password=123456789
+spring.datasource.driver-class-name=org.postgresql.Driver
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+
+
