--- a/5-socialMediaApp/src/main/resources/application.properties
+++ b/5-socialMediaApp/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 spring.application.name=socialMediaApp
+spring.datasource.url=jdbc:h2:mem:testdb;
+spring.jpa.defer-datasource-initialization=true
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
