--- a/5-socialMediaApp/src/main/resources/application.properties
+++ b/5-socialMediaApp/src/main/resources/application.properties
@@ -1,21 +1,21 @@
 spring.application.name=socialMediaApp
 spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
-# spring.datasource.url=jdbc:h2:mem:testdb;
-# spring.h2.console.enabled=true
-# spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:h2:mem:testdb;
+spring.h2.console.enabled=true
+spring.jpa.hibernate.ddl-auto=update
 # spring.jpa.show-sql=true
-# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
-# spring.h2.console.path=/h2-console
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+spring.h2.console.path=/h2-console
 
 
 # DB configuration for PostgreSQL
-spring.datasource.url=jdbc:postgresql://localhost:5432/social_media_database
-spring.datasource.username=postgres
-spring.datasource.password=123456789
-spring.datasource.driver-class-name=org.postgresql.Driver
-spring.jpa.hibernate.ddl-auto=update
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+# spring.datasource.url=jdbc:postgresql://localhost:5432/social_media_database
+# spring.datasource.username=postgres
+# spring.datasource.password=123456789
+# spring.datasource.driver-class-name=org.postgresql.Driver
+# spring.jpa.hibernate.ddl-auto=update
+# spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 
 
 # Spring security
