feat: Optimizing docker file by reusing cached layers

--- a/5-socialMediaApp/Dockerfile
+++ b/5-socialMediaApp/Dockerfile
@@ -1,5 +1,11 @@
 FROM maven:3.8.6-openjdk-18-slim AS build
 WORKDIR /home/socialMediaApp
+
+COPY ./pom.xml /home/socialMediaApp/pom.xml
+COPY ./src/main/java/restfulWebService/socialMediaApp/SocialMediaAppApplication.java /home/socialMediaApp/src/main/java/restfulWebService/socialMediaApp/SocialMediaAppApplication.java
+
+RUN mvn -f /home/socialMediaApp/pom.xml clean package
+
 COPY . /home/socialMediaApp/
 RUN mvn -f /home/socialMediaApp/pom.xml clean package
 
